syntax = "proto3";

option php_namespace= "App\\Proto";
option php_metadata_namespace = "App\\Proto\\GPBMetadata";

message Matricula {
    int32 RA = 1;
    string cod_disciplina = 2;
    int32 ano = 3;
    int32 semestre = 4;
    float nota = 5;
    int32 faltas = 6;
}


message CrudMatricula {
    int32 type = 1;
    Matricula matricula = 2;
}

